--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ name: 조유석
 title: Backend Engineer
 email: bluesbeat93@gmail.com
 # email_title: Email (Email title override)
-phone: 01073571328
+phone: 수정연습
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+website: Your website (eg. https://google.com)(optional) 여기 수정해야됨
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
